--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -43,6 +43,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/bottom_sheet"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="true"
