--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -20,51 +20,52 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorApp"
+            android:background="@android:color/white"
             android:orientation="vertical">
 
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="@dimen/_3sdp">
+                android:padding="@dimen/_5sdp">
 
 
                 <ImageView
                     android:id="@+id/imgCancel"
                     android:contentDescription="@string/app_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_22sdp"
+                    android:layout_height="@dimen/_22sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_white_cross"
+                    app:srcCompat="@drawable/ic_black_white_cross"
                     android:background="?attr/selectableItemBackgroundBorderless"/>
 
                 <TextView
                     android:id="@+id/txtFilter"
-                    android:layout_width="wrap_content"
+                    android:layout_width="398dp"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:text="@string/filter"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
                     android:textSize="@dimen/_17sdp"
                     android:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imgCancel"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.app.l_pesa.common.CustomButtonRegular
                     android:id="@+id/buttonReset"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_25sdp"
-                    android:background="@drawable/bg_transparent_border_white_view"
+                    android:background="@drawable/bg_transparent_border_black_view"
                     android:text="@string/reset"
                     android:textAllCaps="false"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.95"
+                    app:layout_constraintHorizontal_bias="1.05"
                     app:layout_constraintStart_toEndOf="@+id/txtFilter"
                     app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
@@ -72,92 +73,169 @@
 
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5sdp"
-           >
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_5sdp"
+            >
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingStart="@dimen/_7sdp"
-                android:paddingEnd="@dimen/_7sdp"
-                android:paddingBottom="@dimen/_5sdp">
+            <View
+                android:id="@+id/viewDivider"
+                android:layout_height="0dp"
+                android:layout_width="@dimen/_1sdp"
+                android:visibility="invisible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/buttonFilterSubmit"
+                />
 
-                <com.app.l_pesa.common.CommonInputLayout
-                    android:id="@+id/commonInputLayout19"
-                    style="@style/customInputLayoutStyle"
-                    android:layout_width="0dp"
-                    app:layout_constraintBottom_toTopOf="@+id/buttonFilterSubmit"
-                    android:layout_height="@dimen/_40sdp"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    app:layout_constraintEnd_toStartOf="@+id/commonInputLayout18"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+            <TextView
+                android:id="@+id/txtDate"
+                android:fontFamily="@font/montserrat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_date_calender"
+                android:drawablePadding="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:gravity="center"
+                android:text="@string/date"
+                android:textSize="@dimen/_14sdp"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
 
-                    <com.app.l_pesa.common.CommonEditTextRegular
-                        android:id="@+id/etFromDate"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="@string/from_date"
-                        android:textColor="@color/textColors"
-                        android:textSize="@dimen/_12sdp"
-                        app:fontFamily="@font/montserrat"
-                        android:drawableEnd="@drawable/ic_request_date"
-                        android:cursorVisible="false"
-                        android:longClickable="false"
-                        android:inputType="date"
-                        android:focusable="false"/>
+                />
 
-                </com.app.l_pesa.common.CommonInputLayout>
+            <TextView
+                android:id="@+id/txtFDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_date_calender"
+                android:drawablePadding="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center|start"
+                android:text="@string/from_amount"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtDate"
+                app:layout_constraintBottom_toTopOf="@+id/etFromDate"
+                app:layout_constraintEnd_toStartOf="@id/viewDivider"
 
-                <com.app.l_pesa.common.CommonInputLayout
-                    android:id="@+id/commonInputLayout18"
-                    style="@style/customInputLayoutStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/_40sdp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/commonInputLayout19"
-                    app:layout_constraintTop_toTopOf="parent">
+                />
 
-                    <com.app.l_pesa.common.CommonEditTextRegular
-                        android:id="@+id/etToDate"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="@string/to_date"
-                        android:textColor="@color/textColors"
-                        android:textSize="@dimen/_12sdp"
-                        app:fontFamily="@font/montserrat"
-                        android:drawableEnd="@drawable/ic_request_date"
-                        android:cursorVisible="false"
-                        android:longClickable="false"
-                        android:inputType="date"
-                        android:focusable="false" />
+            <com.app.l_pesa.common.CommonEditTextRegular
+                android:id="@+id/etFromDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:drawablePadding="@dimen/_3sdp"
+                android:hint="@string/from_date"
+                android:textColor="@color/textColors"
+                android:textSize="@dimen/_10sdp"
+                app:fontFamily="@font/montserrat"
+                android:drawableEnd="@drawable/ic_date_calender"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtFDate"
+                app:layout_constraintEnd_toStartOf="@+id/imgCleanFrom_date"
+                android:cursorVisible="false"
+                android:longClickable="false"
+                android:inputType="date"
+                android:focusable="false"/>
 
-
-                </com.app.l_pesa.common.CommonInputLayout>
-
-                <com.app.l_pesa.common.CustomButtonRegular
-                    android:id="@+id/buttonFilterSubmit"
-                    android:layout_width="@dimen/_120sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:background="@drawable/ripple_green_button"
-                    android:text="@string/search"
-                    android:textAllCaps="false"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/commonInputLayout19"
-                    android:textColor="@color/colorPrimaryDark"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+            <ImageView
+                android:id="@+id/imgCleanFrom_date"
+                android:contentDescription="@string/app_name"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:layout_marginEnd="@dimen/_3sdp"
+                app:srcCompat="@drawable/ic_black_white_cross"
+                app:layout_constraintStart_toEndOf="@+id/etFromDate"
+                app:layout_constraintTop_toBottomOf="@+id/txtFDate"
+                app:layout_constraintEnd_toStartOf="@+id/viewDivider"
 
 
-            </android.support.constraint.ConstraintLayout>
+                />
 
-        </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/txtTDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_date_calender"
+                android:drawablePadding="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center|start"
+                android:text="@string/to_date"
+                android:textSize="@dimen/_12sdp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/viewDivider"
+                app:layout_constraintTop_toBottomOf="@+id/txtDate"
+                />
+
+
+            <com.app.l_pesa.common.CommonEditTextRegular
+                android:id="@+id/etToDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:cursorVisible="false"
+                android:drawableEnd="@drawable/ic_date_calender"
+                android:drawablePadding="@dimen/_3sdp"
+                android:focusable="false"
+                android:hint="@string/to_date"
+                android:inputType="date"
+                android:longClickable="false"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:textColor="@color/textColors"
+                android:textSize="@dimen/_10sdp"
+                app:fontFamily="@font/montserrat"
+                app:layout_constraintStart_toStartOf="@+id/txtTDate"
+                app:layout_constraintTop_toBottomOf="@+id/txtTDate"
+                app:layout_constraintEnd_toStartOf="@+id/imgCleanTo_date"
+                />
+
+
+            <ImageView
+                android:id="@+id/imgCleanTo_date"
+                android:contentDescription="@string/app_name"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:layout_marginEnd="@dimen/_3sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_black_white_cross"
+                app:layout_constraintStart_toEndOf="@+id/etToDate"
+                app:layout_constraintTop_toBottomOf="@+id/txtTDate"
+
+
+                />
+
+
+            <com.app.l_pesa.common.CustomButtonRegular
+                android:id="@+id/buttonFilterSubmit"
+                android:layout_width="@dimen/_120sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:background="@drawable/ripple_green_button"
+                android:text="@string/search"
+                android:textAllCaps="false"
+                android:layout_marginTop="@dimen/_20sdp"
+                app:layout_constraintTop_toBottomOf="@+id/etFromDate"
+                android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
+        </android.support.constraint.ConstraintLayout>
+
 
     </LinearLayout>
 
