--- a/app/src/main/res/drawable/ic_date_calender.xml
+++ b/app/src/main/res/drawable/ic_date_calender.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="48"
-    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/_22sdp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="@dimen/_22sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#F9DA9B" android:pathData="M12.1,17h10.2v10.3h-10.2z"/>
     <path android:fillColor="#F9DA9B" android:pathData="M26.7,17h10.2v10.3h-10.2z"/>
     <path android:fillColor="#F9DA9B" android:pathData="M26.7,31h10.2v10.3h-10.2z"/>
