--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -81,51 +81,27 @@
             android:paddingEnd="@dimen/_5sdp"
             >
 
-            <View
-                android:id="@+id/viewDivider"
-                android:layout_height="0dp"
-                android:layout_width="@dimen/_1sdp"
-                android:visibility="invisible"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/buttonFilterSubmit"
-                />
-
-            <TextView
-                android:id="@+id/txtDate"
-                android:fontFamily="@font/montserrat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_date_calender"
-                android:drawablePadding="@dimen/_3sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:gravity="center"
-                android:text="@string/date"
-                android:textSize="@dimen/_14sdp"
-                android:textColor="@color/colorBlack"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
-                />
 
             <TextView
                 android:id="@+id/txtFDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_25sdp"
                 android:drawableStart="@drawable/ic_date_calender"
                 android:drawablePadding="@dimen/_3sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:gravity="center|start"
-                android:text="@string/from_amount"
-                android:textSize="@dimen/_12sdp"
+                android:text="@string/from_date"
+                android:textSize="@dimen/_13sdp"
                 android:textColor="@color/colorBlack"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtDate"
-                app:layout_constraintBottom_toTopOf="@+id/etFromDate"
-                app:layout_constraintEnd_toStartOf="@id/viewDivider"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/etFromDate"
+                app:layout_constraintBottom_toTopOf="@+id/txtTDate"
+                app:layout_constraintBottom_toBottomOf="@+id/etFromDate"
 
                 />
+
 
             <com.app.l_pesa.common.CommonEditTextRegular
                 android:id="@+id/etFromDate"
@@ -133,51 +109,62 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:drawablePadding="@dimen/_3sdp"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
                 android:hint="@string/from_date"
                 android:textColor="@color/textColors"
                 android:textSize="@dimen/_10sdp"
                 app:fontFamily="@font/montserrat"
                 android:drawableEnd="@drawable/ic_date_calender"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtFDate"
-                app:layout_constraintEnd_toStartOf="@+id/imgCleanFrom_date"
                 android:cursorVisible="false"
                 android:longClickable="false"
                 android:inputType="date"
-                android:focusable="false"/>
+                android:focusable="false"
+                app:layout_constraintStart_toEndOf="@+id/txtFDate"
+                app:layout_constraintEnd_toStartOf="@+id/imgCleanFrom_date"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtTDate"
+
+                />
 
             <ImageView
                 android:id="@+id/imgCleanFrom_date"
                 android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_marginEnd="@dimen/_3sdp"
                 app:srcCompat="@drawable/ic_black_white_cross"
                 app:layout_constraintStart_toEndOf="@+id/etFromDate"
+                app:layout_constraintTop_toTopOf="@+id/etFromDate"
                 app:layout_constraintTop_toBottomOf="@+id/txtFDate"
-                app:layout_constraintEnd_toStartOf="@+id/viewDivider"
-
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtTDate"
+                app:layout_constraintBottom_toBottomOf="@+id/etFromDate"
 
                 />
 
 
+
+
+
             <TextView
                 android:id="@+id/txtTDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_25sdp"
                 android:drawableStart="@drawable/ic_date_calender"
                 android:drawablePadding="@dimen/_3sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_12sdp"
                 android:gravity="center|start"
                 android:text="@string/to_date"
-                android:textSize="@dimen/_12sdp"
-                android:fontFamily="@font/montserrat"
+                android:textSize="@dimen/_13sdp"
                 android:textColor="@color/colorBlack"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/viewDivider"
-                app:layout_constraintTop_toBottomOf="@+id/txtDate"
+                app:layout_constraintTop_toBottomOf="@+id/txtFDate"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/etToDate"
+                app:layout_constraintBottom_toBottomOf="@+id/etToDate"
+
                 />
 
 
@@ -185,36 +172,39 @@
                 android:id="@+id/etToDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:cursorVisible="false"
-                android:drawableEnd="@drawable/ic_date_calender"
+                android:layout_marginTop="@dimen/_12sdp"
                 android:drawablePadding="@dimen/_3sdp"
-                android:focusable="false"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
                 android:hint="@string/to_date"
-                android:inputType="date"
-                android:longClickable="false"
-                android:layout_marginTop="@dimen/_5sdp"
                 android:textColor="@color/textColors"
                 android:textSize="@dimen/_10sdp"
                 app:fontFamily="@font/montserrat"
-                app:layout_constraintStart_toStartOf="@+id/txtTDate"
-                app:layout_constraintTop_toBottomOf="@+id/txtTDate"
+                android:drawableEnd="@drawable/ic_date_calender"
+                android:cursorVisible="false"
+                android:longClickable="false"
+                android:inputType="date"
+                android:focusable="false"
+                app:layout_constraintStart_toEndOf="@+id/txtTDate"
                 app:layout_constraintEnd_toStartOf="@+id/imgCleanTo_date"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/txtFDate"
 
+
+                />
 
             <ImageView
                 android:id="@+id/imgCleanTo_date"
                 android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_marginEnd="@dimen/_3sdp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/ic_black_white_cross"
                 app:layout_constraintStart_toEndOf="@+id/etToDate"
+                app:layout_constraintTop_toTopOf="@+id/etToDate"
                 app:layout_constraintTop_toBottomOf="@+id/txtTDate"
-
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/etToDate"
 
                 />
 
@@ -224,10 +214,10 @@
                 android:layout_width="@dimen/_120sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:background="@drawable/ripple_green_button"
-                android:text="@string/search"
+                android:text="@string/apply_filter"
                 android:textAllCaps="false"
                 android:layout_marginTop="@dimen/_20sdp"
-                app:layout_constraintTop_toBottomOf="@+id/etFromDate"
+                app:layout_constraintTop_toBottomOf="@+id/etToDate"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
