--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -85,8 +84,8 @@
             <TextView
                 android:id="@+id/txtFDate"
                 android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_height="@dimen/_32sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:drawableStart="@drawable/ic_date_calender"
                 android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
@@ -95,9 +94,8 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/_13sdp"
                 app:layout_constraintBottom_toBottomOf="@+id/etFromDate"
-                app:layout_constraintBottom_toTopOf="@+id/txtTDate"
+                app:layout_constraintBottom_toTopOf="@+id/viewDivider"
                 app:layout_constraintEnd_toStartOf="@+id/etFromDate"
-                app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -105,8 +103,7 @@
             <com.app.l_pesa.common.CommonEditTextRegular
                 android:id="@+id/etFromDate"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_height="@dimen/_32sdp"
                 android:drawablePadding="@dimen/_3sdp"
                 android:layout_marginStart="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
@@ -119,9 +116,8 @@
                 android:inputType="date"
                 android:focusable="false"
                 app:layout_constraintStart_toEndOf="@+id/txtFDate"
+                app:layout_constraintTop_toTopOf="@+id/txtFDate"
                 app:layout_constraintEnd_toStartOf="@+id/imgCleanFrom_date"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/txtTDate"
 
                 />
 
@@ -134,9 +130,7 @@
                 app:srcCompat="@drawable/ic_black_white_cross"
                 app:layout_constraintStart_toEndOf="@+id/etFromDate"
                 app:layout_constraintTop_toTopOf="@+id/etFromDate"
-                app:layout_constraintTop_toBottomOf="@+id/txtFDate"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/txtTDate"
                 app:layout_constraintBottom_toBottomOf="@+id/etFromDate"
 
                 />
@@ -147,7 +141,7 @@
                 android:id="@+id/viewDivider"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 app:layout_constraintTop_toBottomOf="@+id/etFromDate"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
@@ -162,10 +156,10 @@
                 android:id="@+id/txtTDate"
                 android:fontFamily="@font/montserrat"
                 android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_25sdp"
+                android:layout_height="@dimen/_32sdp"
                 android:drawableStart="@drawable/ic_date_calender"
                 android:drawablePadding="@dimen/_3sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:gravity="center|start"
                 android:text="@string/to_date"
                 android:textSize="@dimen/_13sdp"
@@ -181,8 +175,8 @@
             <com.app.l_pesa.common.CommonEditTextRegular
                 android:id="@+id/etToDate"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_12sdp"
+                android:layout_height="@dimen/_32sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:drawablePadding="@dimen/_3sdp"
                 android:layout_marginStart="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
@@ -219,8 +213,9 @@
 
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonFilterSubmit"
-                android:layout_width="@dimen/_120sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:textSize="@dimen/_12sdp"
                 android:background="@drawable/ripple_green_button"
                 android:text="@string/apply_filter"
                 android:textAllCaps="false"
