--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -105,7 +105,7 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_32sdp"
                 android:drawablePadding="@dimen/_3sdp"
-                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:hint="@string/from_date"
                 android:textColor="@color/textColors"
@@ -115,6 +115,9 @@
                 android:longClickable="false"
                 android:inputType="date"
                 android:focusable="false"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                android:background="@drawable/text_black_border"
                 app:layout_constraintStart_toEndOf="@+id/txtFDate"
                 app:layout_constraintTop_toTopOf="@+id/txtFDate"
                 app:layout_constraintEnd_toStartOf="@+id/imgCleanFrom_date"
@@ -178,7 +181,7 @@
                 android:layout_height="@dimen/_32sdp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:drawablePadding="@dimen/_3sdp"
-                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:hint="@string/to_date"
                 android:textColor="@color/textColors"
@@ -188,6 +191,9 @@
                 android:longClickable="false"
                 android:inputType="date"
                 android:focusable="false"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                android:background="@drawable/text_black_border"
                 app:layout_constraintStart_toEndOf="@+id/txtTDate"
                 app:layout_constraintEnd_toStartOf="@+id/imgCleanTo_date"
                 app:layout_constraintTop_toBottomOf="@+id/viewDivider"
