--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -8,7 +8,6 @@
 
 
     <LinearLayout
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
@@ -16,7 +15,7 @@
 
 
         <LinearLayout
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/white"
@@ -84,7 +83,7 @@
             <TextView
                 android:id="@+id/txtFDate"
                 android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_32sdp"
+                android:layout_height="@dimen/_35sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:drawableStart="@drawable/ic_date_calender"
                 android:drawablePadding="@dimen/_3sdp"
@@ -103,7 +102,7 @@
             <com.app.l_pesa.common.CommonEditTextRegular
                 android:id="@+id/etFromDate"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_32sdp"
+                android:layout_height="@dimen/_35sdp"
                 android:drawablePadding="@dimen/_3sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
@@ -159,7 +158,7 @@
                 android:id="@+id/txtTDate"
                 android:fontFamily="@font/montserrat"
                 android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_32sdp"
+                android:layout_height="@dimen/_35sdp"
                 android:drawableStart="@drawable/ic_date_calender"
                 android:drawablePadding="@dimen/_3sdp"
                 android:layout_marginTop="@dimen/_15sdp"
@@ -178,7 +177,7 @@
             <com.app.l_pesa.common.CommonEditTextRegular
                 android:id="@+id/etToDate"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_32sdp"
+                android:layout_height="@dimen/_35sdp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:drawablePadding="@dimen/_3sdp"
                 android:layout_marginStart="@dimen/_10sdp"
@@ -201,6 +200,7 @@
 
                 />
 
+
             <ImageView
                 android:id="@+id/imgCleanTo_date"
                 android:contentDescription="@string/app_name"
@@ -217,6 +217,20 @@
                 />
 
 
+            <View
+                android:id="@+id/viewDividerTwo"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_1sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                app:layout_constraintTop_toBottomOf="@+id/etToDate"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:background="@color/divider_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                />
+
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonFilterSubmit"
                 android:layout_width="@dimen/_150sdp"
@@ -226,7 +240,7 @@
                 android:text="@string/apply_filter"
                 android:textAllCaps="false"
                 android:layout_marginTop="@dimen/_20sdp"
-                app:layout_constraintTop_toBottomOf="@+id/etToDate"
+                app:layout_constraintTop_toBottomOf="@+id/viewDividerTwo"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
