--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -56,11 +56,12 @@
 
                 <com.app.l_pesa.common.CustomButtonRegular
                     android:id="@+id/buttonReset"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_25sdp"
+                    android:layout_width="@dimen/_85sdp"
+                    android:layout_height="@dimen/_27sdp"
                     android:background="@drawable/bg_transparent_border_black_view"
                     android:text="@string/reset"
                     android:textAllCaps="false"
+                    android:textSize="@dimen/_12sdp"
                     android:textColor="@color/colorBlack"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
