--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -68,18 +68,19 @@
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtStatus"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_28sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_22sdp"
                 android:fontFamily="@font/montserrat"
                 android:textSize="@dimen/_10sdp"
                 android:maxLines="1"
                 android:drawableEnd="@drawable/ic_up_arrow"
-                android:drawablePadding="@dimen/_5sdp"
+                android:drawablePadding="@dimen/_7sdp"
                 android:gravity="center|start"
                 android:paddingStart="@dimen/_5sdp"
                 android:paddingEnd="@dimen/_1sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtToken"
+                android:layout_marginBottom="@dimen/_32sdp"
 
                 />
 
@@ -89,8 +90,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center|start"
                 android:paddingStart="@dimen/_5sdp"
-                android:paddingBottom="@dimen/_5sdp"
-                android:paddingTop="@dimen/_3sdp"
+                android:paddingBottom="@dimen/_7sdp"
+                android:paddingTop="@dimen/_2sdp"
                 android:paddingEnd="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorTextBlackLight"
@@ -105,13 +106,11 @@
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtRef"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_22sdp"
                 android:fontFamily="@font/montserrat"
                 android:textSize="@dimen/_10sdp"
                 android:maxLines="1"
                 android:gravity="center|start"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginBottom="@dimen/_2sdp"
                 android:paddingStart="@dimen/_15sdp"
                 android:paddingEnd="@dimen/_1sdp"
                 app:layout_constraintStart_toEndOf="@+id/view"
@@ -129,7 +128,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtStatus"
-                android:layout_marginTop="@dimen/_7sdp"
+                android:layout_marginTop="@dimen/_3sdp"
                 android:paddingStart="@dimen/_7sdp"
                 android:paddingEnd="@dimen/_1sdp"
                 android:paddingBottom="@dimen/_5sdp"
