--- a/app/src/main/res/layout/layout_loan_history.xml
+++ b/app/src/main/res/layout/layout_loan_history.xml
@@ -78,7 +78,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_10sdp"
+                        android:fontFamily="@font/montserrat"
                         android:text="@string/loan_no"/>
 
                     <com.app.l_pesa.common.CommonTextRegular
@@ -86,11 +87,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="#000000"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_10sdp"
                         android:layout_toEndOf="@+id/txt_loan"
                         android:gravity="center|start"
                         android:paddingStart="@dimen/_1sdp"
                         android:paddingEnd="@dimen/_1sdp"
+                        android:fontFamily="@font/montserrat"
                         android:text=""/>
 
                 </RelativeLayout>
@@ -107,7 +109,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_10sdp"
+                        android:fontFamily="@font/montserrat"
                         android:text="@string/loan_amount"/>
 
                     <com.app.l_pesa.common.CommonTextRegular
@@ -115,11 +118,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="#000000"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_10sdp"
                         android:layout_toEndOf="@+id/txt_amount"
                         android:gravity="center|start"
                         android:paddingStart="@dimen/_1sdp"
                         android:paddingEnd="@dimen/_1sdp"
+                        android:fontFamily="@font/montserrat"
                         android:text=""/>
 
                 </RelativeLayout>
@@ -135,7 +139,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_10sdp"
+                        android:fontFamily="@font/montserrat"
                         android:text="@string/interest_rate"/>
 
                     <com.app.l_pesa.common.CommonTextRegular
@@ -143,7 +148,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="#000000"
-                        android:textSize="@dimen/_11sdp"
+                        android:fontFamily="@font/montserrat"
+                        android:textSize="@dimen/_10sdp"
                         android:layout_toEndOf="@+id/txt_rate"
                         android:gravity="center|start"
                         android:paddingStart="@dimen/_1sdp"
@@ -208,8 +214,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text=""
+                        android:fontFamily="@font/montserrat"
                         android:gravity="center|start"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_10sdp"
                         android:textColor="@color/color_light_gold"
 
                         />
@@ -219,8 +226,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text=""
+                        android:fontFamily="@font/montserrat"
                         android:textColor="@color/color_semi_deep_black"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_10sdp"
 
                         />
 
@@ -277,8 +285,9 @@
                             android:gravity="center|start"
                             android:paddingEnd="@dimen/_1sdp"
                             android:text=""
+                            android:fontFamily="@font/montserrat"
                             android:textColor="#8e8963"
-                            android:textSize="@dimen/_11sdp" />
+                            android:textSize="@dimen/_10sdp" />
 
 
                     </LinearLayout>
