--- a/app/src/main/res/layout/layout_list_notification.xml
+++ b/app/src/main/res/layout/layout_list_notification.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:textSize="@dimen/_11sdp"
-                android:textColor="@color/light_text_color"
+                android:textColor="@color/colorTextBlackLight"
                 app:layout_constraintBottom_toTopOf="@+id/txt_description"
                 app:layout_constraintStart_toEndOf="@+id/img_icon"
                 app:layout_constraintTop_toTopOf="@+id/img_icon" />
@@ -41,8 +41,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:fontFamily="@font/montserrat"
-                android:textSize="@dimen/_10sdp"
-                android:textColor="@color/dark_text_color"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/colorTextBlackLight"
                 android:layout_marginTop="@dimen/_3sdp"
                 android:text=""
                 app:layout_constraintBottom_toBottomOf="parent"
