--- a/app/src/main/res/layout/layout_list_transaction_history.xml
+++ b/app/src/main/res/layout/layout_list_transaction_history.xml
@@ -65,7 +65,7 @@
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtRef"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_20sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_6sdp"
                 android:textSize="@dimen/_10sdp"
                 android:fontFamily="@font/montserrat"
