--- a/app/src/main/res/drawable/empty_dot.xml
+++ b/app/src/main/res/drawable/empty_dot.xml
@@ -3,5 +3,5 @@
     android:shape="oval">
     <stroke
         android:color="@color/colorPrimary"
-        android:width="1.0dp"/>
+        android:width="@dimen/_1sdp"/>
 </shape>
